Remove Java URL Class deprecations